Fix and provide song search issue & add LyricGlobalDelay option
not really useful, song search issue fixed and promoted & add LyricGlobalDelay option

--- a/modifiers/lyric.css
+++ b/modifiers/lyric.css
@@ -9,6 +9,7 @@
 	font-style: italic;
 	font-variant: normal;
 	text-transform: none;
-	text-align: right;
+	direction: ltr;
+	text-align:right;
 	text-shadow: 3px 3px 3px #CE6BC6;
 }
